[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/UI_Theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/MenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/InGameUI.gd" type="Script" id=3]
[ext_resource path="res://UI/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/background.png" type="Texture" id=5]
[ext_resource path="res://assets/font_default.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/MainMenuButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/jump-icon.png" type="Texture" id=8]
[ext_resource path="res://assets/dash-icon.png" type="Texture" id=9]

[node name="InGameUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.0196078, 0.282353, 0.270588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.0
margin_top = 28.0
margin_right = 91.0
margin_bottom = 85.0
text = "Paused"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = -106.0
margin_right = 181.0
margin_bottom = 106.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 7 )]

[node name="MarginContainer" type="MarginContainer" parent="PauseOverlay/PauseMenu"]
margin_top = 72.0
margin_right = 362.0
margin_bottom = 140.0
size_flags_vertical = 3

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 144.0
margin_right = 362.0
margin_bottom = 212.0

[node name="HintLabel" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -282.0
margin_top = -57.0
margin_right = 282.0
custom_fonts/font = ExtResource( 6 )
text = "Press R in game to reset current level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 125.0
margin_right = 92.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 2 )
text = "%s hit Combo!"
align = 2

[node name="CanJump" type="TextureRect" parent="."]
modulate = Color( 0, 1, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -165.0
margin_top = -40.0
margin_right = -125.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanDash" type="TextureRect" parent="."]
modulate = Color( 0, 1, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 139.0
margin_top = -40.0
margin_right = 179.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
